--- a/index.html
+++ b/index.html
@@ -1,129 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>Chaitali Khisti</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name=keywords content="web designer, front-end developer, databases, chaitalikhisti, ChaitaliKhisti">		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<style>
-		body
-		{
-			background-image: url(images/green_wallpaperv.jpg);
-			font-family: "Times New Roman", Times, serif;
-		}
-		#nav_bar
-		{
-			background-color: #003366;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		.jumbotron
-		{
-			background-color: transparent;
-			text-align: center;
-			margin-top: 130px;
-			margin-bottom: 25px;
-			padding-top: 100px;
-		}
-		.font
-		{
-			font-family: Brush Script Std, Brush Script MT, cursive;
-			font-weight: 900;
-		}
-		.jumbo_buttons
-		{
-			background-color: transparent;
-			border: 1px solid black;
-			color: black;
-			font-style: italic;
-		}
-		.jumbo_buttons:hover
-		{
-			background: none;
-			border: 1px solid black;
-			color: black;
-		}
-		p
-		{
-			width: 850px;
-			font-size: 18px;
-			margin-left: auto;
-			margin-right: auto;
-			margin-top: 20px;
-			font-style: italic;
-		}
-		.headings
-		{
-			margin-top: 50px;
-			margin-bottom: 30px;
-			padding-top: 55px;			
-			font-size: 60px;
-		}
-		#footer
-		{
-			height: 50px;
-		}
-		#footer_para
-		{
-			text-align: right;
-			font-size: 70%;
-			font-type: sans serif;
-			padding-right: 50px;
-			padding-top: 15px;
-		}
-		</style>
-	</head>
-	<body>	
-		<nav class="navbar navbar-inverse navbar-toggleable-md navbar-light bg-faded fixed-top" id="nav_bar">			
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<a class="navbar-brand" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a><span class="sr-only">Home Page</span>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">					
-					<li class="nav-item">
-						<a class="nav-link" href="about_me.html">About Me</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="projects.html">Projects</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="resume2.html">Resume</a>
-					</li>
-				</ul>				
-			</div>
-		</nav>		
-		<div class="jumbotron" id="jumbo">
-			<h1 class="display-3 font">Hi, I am Chaitali Khisti!!!</h1>
-			<p class="lead">All geared up for full-time opportunities starting from May 2017.</p>
-			<hr class="my-4">
-			<p>Isn't it always good to have more professional information about people?</p>
-			<button type="button" class="btn btn-outline-info jumbo_buttons" onclick="return btntest_onclick()">Resume</button>
-		</div>
-		<div id="footer">
-			<div id="footer_para">© Chaitali Khisti 2017. All rights for this template are reserved except for external images.</div>
-		</div>
+		<meta charset="UTF-8">
+		<title>Introduction</title>
+		<!-- Scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
 		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" 
+		integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" 
+		crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
+		integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
+		crossorigin="anonymous"></script>
+		<script src="js/pageLoad.js"></script>
+		<script src="js/navBar.js"></script>
+		<!-- Styles -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/pageStyles.css" />
+		<link rel="stylesheet" type="text/css" href="css/basicStyles.css" />
+	</head>
+	<body id="introBody">
+		<nav class="navbar navbar-toggleable-md navbar-light fixed-top">
+			<button class="navbar-toggler navbar-toggler-right navPlacement" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<i class="fa fa-bars nav-color" aria-hidden="true"></i>
+			</button>
+			<div class="navPlacement">
+				<a class="navbar-brand nav-color but" href="index.html">
+					<img src="images/name.png" id="name" />
+				</a>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="nav navbar-nav mr-auto float-right top-nav">
+						<li class="nav-item active">
+							<a class="nav-link nav-color-links" href="index.html">Introduction</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link nav-color-links" href="otherWebpages/EducPage.html">Education</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link nav-color-links" href="otherWebpages/SkillPage.html">Skills</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link nav-color-links" href="otherWebpages/ProjPage.html">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link nav-color-links" href="otherWebpages/ContactPage.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>		
+		</nav>
+		<div class="jumbotron jumbotron-fluid">
+			<div><hr></div>
+			<h2 class="display-3">About Me</h2>
+		</div>
+		<div class="card">
+			<p>Hello,</p>
+			<p>I am Chaitali</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp; First of all, I would like to thank you for
+				taking the time to view my page. As I truely appreciate
+				your effort, I have crafted this website on my own and
+				am open to any suggestions which you think would make
+				it better!
+			</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp; I am a graduate student at Colorado State University
+				pursuing Master's of Science in Electrical and Computer
+				Engineering. I have successfully accomplished
+				Bachelor of Engineering degree in the field of
+				Electronics and Telecommunication Engineering.
+			</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp; During all this time,
+				it occurred to me that 'Engineering' is one of those
+				fields which give you a platform to develop things
+				without any barrier. And thus, I am looking forward
+				to tapping full potential of the creativity I possess
+				to build products and services for everyday needs.
+			</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp; In order to boost
+				performance in everyday life, I think we need to
+				foster hobbies that will strengthen our mind and help
+				us focus better.
+				<br>My hobbies are reading books and trying DIY Projects.
+				Since reading books is considered as 'food for mind', I mainly like
+				to read books based on spiritual and self-improvement themes.
+				<br>Some of the really good books I have read and would
+				highly recommend for people with similar
+				interests are:
+				<ul>
+					<li>'The monk who sold his ferrari' - Robin Sharma</li>
+					<li>'Who will cry when you die' - Robin Sharma</li>
+					<li>'Tuesdays with Morrie' - Mitch Albom</li>
+					<li>'The Secret' - Rhonda Byrne</li>
+					<li>'Rich Dad Poor Dad' - Robert Kiyosaki</li>
+					<li>'7 habits of highly effective people' - Stephen Covey</li>
+					<li>'90 minutes in heaven' - Don Piper (with Cecil Murphy)</li>
+				</ul>
+			</p>
+		</div>
+		<footer>
+			<div id="footer">
+				<div class="res-con">
+					<button class="btn footer-button" type="button" onclick="loadCP()">
+						<i class="fa fa-handshake-o" aria-hidden="true"></i>
+						Contact
+					</button>
+					<button class="btn footer-button" type="button" onclick="loadRP()">
+						<i class="fa fa-file-code-o" aria-hidden="true"></i>
+						Resume
+					</button>
+				</div>
+				<div id="footer-para">
+					© Chaitali Khisti 2017. All rights for this template are reserved except for external images.
+				</div>
+			</div>
+		</footer>
 		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
 		  ga('create', 'UA-91901941-1', 'auto');
 		  ga('send', 'pageview');
-
-			function btntest_onclick()
-			{
-				window.open("resume2.html");
-			}			
-       </script>		
+		</script>
 	</body>
 </html>
